# astron-rpa

./: .gitignore  FAQ.md  FAQ.zh.md  README.zh.md  build.sh
backend/ai-service/app/: config.py
backend/robot-service/: pom.xml
docker/: .env.example  docker-compose.yml
docs/: AI-STUDIO-OPENCODE-INTEGRATION.md  openclaw-astron-rpa-capability-blueprint.md
engine/: meta_json.py  pyproject.toml  requirements.txt
engine/servers/astronverse-openclaw/: .gitignore  pyproject.toml
engine/servers/astronverse-openclaw/.openclaw-state.seed/: openclaw.json
engine/servers/astronverse-openclaw/.openclaw-state.seed/workspace/: AGENTS.md  SOUL.md  USER.md
engine/servers/astronverse-openclaw/src/astronverse/openclaw/: __main__.py  config.py  launcher.py  logger.py
engine/servers/astronverse-openclaw/src/astronverse/openclaw/.openclaw-state.seed/: README.md  openclaw.json  openclaw.runtime.json
engine/servers/astronverse-openclaw/src/astronverse/openclaw/.openclaw-state.seed/agent/: auth-profiles.json  models.json
engine/servers/astronverse-openclaw/src/astronverse/openclaw/.openclaw-state.seed/workspace/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  TOOLS.md  USER.md
engine/servers/astronverse-openclaw/src/astronverse/openclaw/server/: server.py
engine/tools/: gen_internal_atom_sql.py
frontend/: package.json  pnpm-lock.yaml
frontend/locales/: en-US.json  zh-CN.json
frontend/public/: manifest.json
resources/: conf.yaml
resources/mac/: astron_native_messaging  astron_native_messaging.json
scripts/: fetch-opencode-sidecar.mjs
(+368 files in other folders)
