[project]
name = "astronverse-openclaw"
version = "1.0.1"
description = "astronverse-openclaw."
requires-python = ">=3.13"

dependencies = [
    "astronverse-baseline",
    "fastapi",
    "uvicorn",
]

[tool.uv.sources]
astronverse-baseline = {path = "../../shared/astronverse-baseline", editable = true}

[tool.hatch.build]
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["src/astronverse"]
include = [
    "src/astronverse/openclaw/.openclaw-state.seed/**",
    "src/astronverse/openclaw/binary/**",
    "src/astronverse/openclaw/openclaw-src/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/pyproject.toml",
    "/src/astronverse/openclaw/.openclaw-state.seed",
    "/src/astronverse/openclaw/binary",
    "/src/astronverse/openclaw/openclaw-src",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
